# dependabot-patherror

./: README.md  pyproject.toml
.github/: dependabot.yml
geocoding-7.74/: README.md  setup.py
geocoding-7.74/geocoding/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
geocoding-7.74/geocoding.egg-info/: PKG-INFO  SOURCES.txt
geocoding-7.74/test/: test_access_response_coordinate.py  test_address.py  test_autocomplete_result_item.py  test_autosuggest_entity_result_item.py  test_autosuggest_query_result_item.py  test_browse_result_item.py  test_category.py  test_chain.py  test_contact.py  test_contact_information.py  test_country_info.py  test_default_api.py  test_display_response_coordinate.py  test_error_response.py  test_ev_charging_attributes.py  test_ev_charging_point.py  test_ev_connector.py  test_ev_name_id.py  test_extended_attribute.py  test_field_score.py  test_geocode_result_item.py  test_lookup_response.py  test_map_view.py  test_match_info.py  test_onebox_search_result_item.py  test_open_search_autocomplete_response.py  test_open_search_autosuggest_response.py  test_open_search_browse_response.py  test_open_search_geocode_response.py  test_open_search_reverse_geocode_response.py  test_open_search_search_response.py  test_opening_hours.py  test_parsing.py  test_phoneme.py  test_phonemes_section.py  test_query_term_result_item.py  test_range.py  test_reverse_geocode_result_item.py  test_scoring.py  test_street_info.py  (+6 more)
routing-8.22.2/: README.md  setup.py
routing-8.22.2/routing.egg-info/: PKG-INFO  SOURCES.txt
(+304 files in other folders)
