[tool.poetry]
name = "dependabot-paterror"
version = "0.1.0"
description = ""
authors = ["Phillip Verheyden <pverheyden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.69.0"
routing = { file = "./here_api/routing-8.22.2.tar.gz" }
geocoding = { file = "./here_api/geocoding-7.74.tar.gz" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
