[tool.poetry]
name = "dependabot-patherror"
version = "0.1.0"
description = ""
authors = ["Phillip Verheyden <pverheyden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
routing = { path = "./here_api/routing-8.22.2.tar.gz" }
geocoding = { path = "./here_api/geocoding-7.74.tar.gz" }
psycopg2-binary = "2.8.6"
pytest-httpx = "0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
